--- a/aacp/Info.plist
+++ b/aacp/Info.plist
@@ -49,5 +49,23 @@
 	</array>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>thxs</string>
+    <key>NSAppTransportSecruity</key>
+    <dict/>
+    <key>NSAppTransportSecurity</key>
+    <dict>
+        <key>NSAllowsArbitraryLoads</key>
+        <true/>
+        <key>NSExceptionDomains</key>
+        <dict>
+            <key>yourdomain.com</key>
+            <dict>
+                <key>NSIncludesSubdomains</key>
+                <true/>
+                <key>NSThirdPartyExceptionRequiresForwardSecrecy</key>
+                <false/>
+            </dict>
+        </dict>
+    </dict>
+
 </dict>
 </plist>
